Shivi | Add endpoint to get userId by email.